Adicionando rota de alteração de produto